--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,25 @@
+.do-display {
+  display: block;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+}
+
+.do-not-display {
+  display: none;
+}
+
+.create-room-modal {
+  position: fixed;
+  background: white;
+  border: 1px solid black;
+  width: 50%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
 .App {
   text-align: center;
 }
